// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aisle List basic render tests Renders Aisle Screen with Data 1`] = `
<View>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.REMOVE_ZONE_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS\\" translation]"
    subtext2={null}
  />
  <LocationHeader
    details="6 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={
      Array [
        Object {
          "aisleId": 1,
          "aisleName": "Aisle 1",
          "sectionCount": 30,
        },
        Object {
          "aisleId": 2,
          "aisleName": "Aisle 2",
          "sectionCount": 0,
        },
        Object {
          "aisleId": 3,
          "aisleName": "Aisle 3",
          "sectionCount": 2,
        },
        Object {
          "aisleId": 4,
          "aisleName": "Aisle 4",
          "sectionCount": 2,
        },
        Object {
          "aisleId": 5,
          "aisleName": "Aisle 5",
          "sectionCount": 30,
        },
        Object {
          "aisleId": 6,
          "aisleName": "Aisle 6",
          "sectionCount": 0,
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Aisle List basic render tests Renders Aisle Screen with no-aisles-message when getAisles response is 204 1`] = `
<View>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.REMOVE_ZONE_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS\\" translation]"
    subtext2={null}
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Aisle List basic render tests Renders Manual Scan Component when isManualScanEnabled is set to true 1`] = `
<View>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.REMOVE_ZONE_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS\\" translation]"
    subtext2={null}
  />
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Aisle List basic render tests renders correctly with remove zone modal after api errors 1`] = `
<View>
  <ApiConfirmationModal
    api={
      Object {
        "error": "timeout",
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={true}
    mainText="[missing \\"en.LOCATION.REMOVE_ZONE_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS\\" translation]"
    subtext2={null}
  />
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Aisle List basic render tests renders correctly with remove zone modal preconfirm 1`] = `
<View>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={true}
    mainText="[missing \\"en.LOCATION.REMOVE_ZONE_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS\\" translation]"
    subtext2={null}
  />
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Aisle List basic render tests renders correctly with remove zone modal waiting for api 1`] = `
<View>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": true,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={true}
    mainText="[missing \\"en.LOCATION.REMOVE_ZONE_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.REMOVE_ZONE_WILL_REMOVE_AISLES_SECTIONS\\" translation]"
    subtext2={null}
  />
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    details="0 [missing \\"en.LOCATION.AISLES\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.ZONE\\" translation] Grocery"
  />
  <FlatList
    ListEmptyComponent={<NoAisleMessage />}
    contentContainerStyle={
      Object {
        "paddingBottom": 100,
      }
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
</View>
`;

exports[`Test Get Aisle Api Response Renders Aisle Api Error Message 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Get Aisle Api Response Renders Aisle Api Error Message when get aisles request times out 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is 400 error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is 424 error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is 500 error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is network error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Get Aisle Api Response Renders Error Message when result is timeout error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Get Aisle Api Response Renders loading indicator when waiting for Aisle Api response 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;
